# index-repo

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix
.github/workflows/: release.yaml  update-flake.yaml
docs/: plan.md  service-design.md  spec.md
examples/: dump.rs
hooks/opencode/: chroma-gate.ts
nix/: hm-module.nix  nixos-module.nix
src/: chroma.rs  chunk.rs  chunkfile.rs  config.rs  daemon.rs  embed.rs  grammar.rs  lazy.rs  lib.rs  main.rs  oneshot.rs  registry.rs  service.rs  splitlines.rs  store.rs  testkit.rs  walk.rs
tests/: gc_e2e.rs  parity.rs
tests/fixtures/: sample.py  sample.rs
tests/parity/: compare.py
