[package]
name = "index-repo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "index-repo"
path = "src/main.rs"

[lib]
name = "index_repo"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tree-sitter = "0.25"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-go = "0.25"
tree-sitter-php = "0.24"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-bash = "0.25"

sha1 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
ignore = "0.4"
walkdir = "2"
notify-debouncer-full = "0.3"
signal-hook = "0.3"

[dev-dependencies]
tempfile = "3"
